--- a/inspector.html
+++ b/inspector.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-    inspector-results.html: Receive a VIVO uri GET from inspector-request.html, make
+    inspector.html: Receive a VIVO uri from the query parameter "vivo_uri", make
 	a SPARQL query to the UF VIVO sparql endpoint to retrieve the triples
 	associated with the VIVO uri.  Display the triples in three columns using d3.js
 	First column is the predicate of the triple with a link to the associated definition.
